@@ -1,3 +1,10 @@
+2019-04-09  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/90008
+	* include/std/variant (_VARIANT_RELATION_FUNCTION_TEMPLATE): Remove
+	unused capture.
+	* testsuite/20_util/variant/90008.cc: New test.
+
 2019-04-08  Ville Voutilainen  <ville.voutilainen@gmail.com>
 
 	Fix visit<R> for variant.
